--- a/example3/styles.css
+++ b/example3/styles.css
@@ -15,17 +15,22 @@
     left:50%;
     transform:translate(-50%,-50%) scale(0);
     background:#fff;
-    width:800px;
-    height:500px;
+    width:1200px;
+    height:800px;
     z-index:2;
     text-align:justify;
     padding:20px;
     box-sizing:border-box;
     font-family:"Open Sans",sans-serif;
+    
+    ;
   }
   img.fabrication{
-    width: 600px;
-    height: 375px;
+    position: absolute;
+    top:20%;
+    left:12%;
+    width: 900px;
+    height: 562.5px;
   }
   .popup .close-btn {
     cursor:pointer;
@@ -34,8 +39,8 @@
     top:20px;
     width:30px;
     height:30px;
-    background:#222;
-    color:#fff;
+    background:#fff;
+    color:#353535;
     font-size:25px;
     font-weight:600;
     line-height:30px;
